Fix css alignment

--- a/less/vetrina.less
+++ b/less/vetrina.less
@@ -15,7 +15,6 @@ body {
 .vetrina--container {
     display: grid;
     justify-content: center;
-    justify-items: center;
     grid-template-columns: minmax(100px, 505px);
     h1, p { text-align: center }
 }
@@ -87,4 +86,8 @@ body {
 
 .product--container {
     text-align: center;
+}
+
+.vetrina--completed-close {
+    justify-self: center;
 }
